# Sources
bin_PROGRAMS = beebattle
beebattle_CPPFLAGS = -Wall -Werror -DPKGDATADIR='"$(pkgdatadir)"'
beebattle_SOURCES = \
  src/beebattle.c

# Data - Images
imagesdatadir = $(pkgdatadir)/images
dist_imagesdata_DATA = \
  data/images/background.bmp \
  data/images/bee1.bmp \
  data/images/bee2.bmp \
  data/images/flower.bmp \
  data/images/pollen.bmp \
  data/images/stinger.bmp
